--- a/style.css
+++ b/style.css
@@ -17,9 +17,33 @@ body {
   z-index: -4;
 }
 
+#map {
+  position: relative;
+  width: 100%;
+  height: auto;
+  vertical-align: center;
+  margin: 0;
+  overflow: hidden;
+}
+
+.resp-container {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+}
+
+.resp-iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
+}
+
 .location {
   content: '';
-  height: 60vh;
+  height: 80vh;
   width: 100%;
   background-image: url('cafe.jpg');
   background-size: cover;
@@ -30,7 +54,7 @@ body {
 }
 .contact {
   content: '';
-  height: 80vh;
+  height: 60vh;
   width: 100%;
   background-image: url('contact.jpg');
   background-size: cover;
@@ -66,7 +90,7 @@ body {
 }
 
 .content .title {
-  font-size: 2.2rem;
+  font-size: 5.2rem;
   margin-top: 1rem;
 }
 
@@ -92,6 +116,10 @@ nav {
 nav ul {
   margin: 0;
   padding: 0;
+}
+
+section {
+  padding: 35px 40px;
 }
 
 nav ul li {
