--- a/style.css
+++ b/style.css
@@ -202,6 +202,16 @@ nav > ul > li > a:hover {
   font-size: 16px;
 }
 
+.vendor {
+  background-color: rgb(247, 95, 8);
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
 .icon {
   margin-top: 1rem;
   margin-bottom: 1rem;
